lab3/k8s/kyverno-polices/disallow-privileged-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: disallow-privileged
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - kyverno
                - local-path-storage
                - cnpg-system
                
          - resources:
              selector:
                matchLabels:
                  cnpg.io/cluster: postgres

      validate:
        message: "Pod can't be launched in Privileged Mode"
        pattern:
          spec:
            containers:
              - =(securityContext):
                  =(privileged): "false"
            =(initContainers):
              - =(securityContext):
                  =(privileged): "false"
